Fixed mobile issues with overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,10 @@
 
 html {
     font-size: 18px;
-    width: 100vw;
+}
+
+section {
+    overflow: hidden;
 }
 
 body {
@@ -23,8 +26,6 @@ body {
     margin: 0;
     opacity: 0;
     height: 100%;
-    opacity: 0;
-
 }
 
 header {
@@ -417,7 +418,6 @@ label a {
 
 .container {
     width: 100%;
-    overflow: hidden;
     position: absolute;
     display: grid;
     grid-template-areas:
@@ -764,6 +764,11 @@ label a {
 
 
 @media screen and (max-width: 768px) {
+
+    .container {
+        grid-template-columns: auto 1fr auto;
+    }
+
     main {
         margin: 0;
     }
@@ -847,7 +852,7 @@ label a {
 
     .contact {
         grid-template-columns: auto;
-        height: calc(100vh - 40px);
+        height: auto;
     }
 
     .contact .right img {
@@ -855,7 +860,7 @@ label a {
     }
 
     .contact .left {
-        margin-top: 3em;
+        margin-top: 2em;
     }
 
 }
